[ADD] building endpoint
